fixed scrollbar appearing in menu bar

--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,37 @@ Not supports in Firefox and IE */
 
 /* total width */
 ::-webkit-scrollbar {
-/*  background-color: #fff; */
   width: 12px;
-}
-
-/* background of the scrollbar except button or resizer */
-::-webkit-scrollbar-track {
-/*  background-color: #fff; */
 }
 
 /* scrollbar itself */
 ::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
-/*  border: 4px solid #fff; */
 }
 
-/* set button(top and bottom of the scrollbar) */
+/* hide scrollbar buttons */
 ::-webkit-scrollbar-button {
   display:none;
 }
 
 /* hide "Open in iTunes" button */
 .web-navigation__native-upsell {
+  display: none;
+}
+/* no scrollbar in menu area */
+div {
+  overflow: hidden;
+}
+
+div.web-navigation__scrollable {
+  overflow: auto;
+}
+
+div.loading-inner {
+  overflow: auto;
+}
+
+footer.dt-footer {
   display: none;
 }
